--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,26 @@ body {
     color: white;
 }
 
+h1, h2 {
+    font-weight: normal;
+}
+
+h1 {
+    font-size: 50px;
+}
+
+h2 {
+    font-size: 42px;
+}
+
 p {
     color: gray;
+}
+
+footer p {
+    text-align: right;
+}
+
+a {
+    color: turquoise;
 }
